output_10.1.168/complex_quda.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
/tmp/complex_quda.h-95bc12.hip:112:6: warning: CUDA identifier is unsupported in HIP.
#if (CUDA_VERSION < 7050)
     ^
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
1 warning and 1 error generated when compiling for host.
Error while processing /tmp/complex_quda.h-95bc12.hip.

[HIPIFY] info: file './quda/include/complex_quda.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 0
  UNCONVERTED refs count: 1
  CONVERSION %: 0
  REPLACED bytes: 0
  TOTAL bytes: 41966
  CHANGED lines of code: 1
  TOTAL lines of code: 1382
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 0
  TIME ELAPSED s: 0.53
[HIPIFY] info: UNCONVERTED refs by type:
  define: 1
[HIPIFY] info: UNCONVERTED refs by API:
  CUDA Driver API: 1
[HIPIFY] info: UNCONVERTED refs by names:
  CUDA_VERSION: 1
